Updated Guidelines for setting up a local workspace (markdown)